# workflow-example

./: Dockerfile  main.tf  pyproject.toml  script.py  setup.py
.github/workflows/: build.yml
