[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "your project description"
authors = ["your-name <your-email>"]

[tool.poetry.dependencies]
python = "^3.8"
# Add your project dependencies here

[tool.poetry.dev-dependencies]
# Add your development dependencies here

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
